traces/bug_634.txt
examples++-load/gmsh.cpp:821: error: DEAD_STORE
  The value written to &renumsurf (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:821:19: Write of unused value
819.     string * pffname= GetAny<string *>((*filename)(stack));
820.     int renumsurf = 0; 
821.     if( nargs[1] )  renumsurf = GetAny<long>( (*nargs[1])(stack) );
                         ^
822.     assert( renumsurf <=1 && renumsurf >= 0);
823.   
